WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
319562
[CSS Scroll Snap] Re-snap should ignore a focused snap area that is scrolled out of the snapport
https://bugs.webkit.org/show_bug.cgi?id=319562
Summary
[CSS Scroll Snap] Re-snap should ignore a focused snap area that is scrolled ...
Ahmad Saleem
Reported
2026-07-16 02:19:20 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-16 02:19:27 PDT
<
rdar://problem/182390905
>
Ahmad Saleem
Comment 2
2026-07-16 02:20:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/69541
EWS
Comment 3
2026-07-17 20:09:53 PDT
Committed
317447@main
(0beb8b67a954): <
https://commits.webkit.org/317447@main
> Reviewed commits have been landed. Closing PR #69541 and removing active labels.
Ahmad Saleem
Comment 4
2026-07-21 23:54:14 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/61477
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug